--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,176 @@
-.App {
+* {
+  box-sizing: border-box;
+  font-family: "Roboto Slab", serif;
+}
+
+.container {
+  box-sizing: border-box;
+  background-color: white;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.content {
+  flex: 2 1 auto;
+  padding: 1% 2%;
+}
+.title h1 {
+  font-size: 2.5em;
+  width: 100%;
+  margin: 2% 0;
+  border-bottom: 1px solid rgba(190, 189, 189, 0.7);
+
+  color: black;
+}
+
+.dash-bar {
+  width: 100%;
+  position: sticky;
+  text-align: left;
+}
+.logo {
+  width: 15%;
+  display: inline-block;
+  padding: 1% 2%;
+}
+
+h1 {
+  font-size: 1.5em;
+  font-weight: bold;
+  color: white;
+  padding: 15px 15px 5px;
+}
+h2 {
+  font-size: 1em;
+}
+#link {
+  text-decoration: none;
+  padding: 5px 15px;
+  display: block;
+  margin-bottom: 10px;
+  color: rgb(255, 255, 255);
+  width: 100%;
+}
+
+.container-sidebar {
+  margin: 0;
+  position: sticky;
+  background-color: #2b2b38;
+  flex-basis: 15%;
+}
+#link {
+  background-color: #2b2b38;
+  width: 100%;
+}
+
+#link:hover {
+  text-decoration: none;
+  color: white;
+  text-decoration-style: none;
+  -moz-text-decoration-line: none;
+  cursor: pointer;
+}
+.card {
+  box-sizing: border-box;
+  transition: ea;
+}
+.card-main {
+  color: black;
+  padding: 1%;
+  margin: 10px auto;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  border-bottom: 2px solid #f27272;
+  padding-bottom: 4%;
+}
+.card-body {
+  box-shadow: 0.5px 0.5px rgba(168, 167, 167, 0.7);
+  border-radius: 10px;
+  padding: 1% 2%;
+}
+.card-main h1 {
+  color: #323c73;
+
+  width: 100%;
+  text-align: center;
+  font-size: 3em;
+}
+.card-main h2 {
+  margin-left: 10px;
+  font-weight: bold;
+  color: #323c73;
+}
+
+.table-head {
+  display: flex;
+  justify-content: space-between;
+}
+.filter {
+  position: relative;
+}
+.filter span {
+  margin: 5px;
+}
+
+.dropdown:hover {
+  cursor: pointer;
+}
+
+.checkbox {
+  position: absolute;
+  bottom: -380%;
+  right: 0;
+  background-color: rgb(212, 212, 212);
+  z-index: 1;
+}
+.check {
+  display: flex;
+  text-align: left;
+  border-top: 0;
+  box-shadow: 0.5px 0.5px rgb(236, 230, 230);
+  padding: 10px;
+  width: 18vh;
+  position: relative;
+}
+.check input {
+  margin: 0;
+  position: absolute;
+  right: 5px;
+}
+.check label {
+  padding: 0;
+}
+span:first-child {
+  font-size: 0.8em;
+  color: rgb(148, 148, 148);
+}
+.table-container {
   text-align: center;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.table {
+  margin: 2% auto;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0.5px 0.5px rgb(236, 230, 230);
+  padding: 0 5%;
 }
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.row {
+  background-color: #f2e7ae;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
 }
-
-.App-title {
-  font-size: 1.5em;
+.row h2 {
+  font-size: 0.9em;
+  width: 12.5%;
 }
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.active {
+  width: 8px;
+  height: 8px;
+  border-radius: 8px;
+  background-color: black;
 }
