--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,47 @@
 * {
   box-sizing: border-box;
-  font-family: "Roboto Slab", serif;
+  font-family: "DM Sans", sans-serif;
 }
-
+.god-container {
+  background-color: #0e0f3b;
+}
 .container {
   box-sizing: border-box;
-  background-color: white;
+  background-color: #f2f2f2;
   height: 100%;
   width: 100%;
   display: flex;
   flex-direction: row;
+  padding: 0 15px 0 0;
 }
 
 .content {
   flex: 2 1 auto;
   padding: 1% 2%;
 }
+.title {
+  display: flex;
+  padding: 4% 2%;
+  border-bottom: 0.5px solid grey;
+}
+
 .title h1 {
   font-size: 2.5em;
   width: 100%;
-  margin: 2% 0;
-  border-bottom: 1px solid rgba(190, 189, 189, 0.7);
-
   color: black;
+  flex-wrap: wrap;
+  padding: 0;
+  margin: 0;
+}
+.select {
+  flex-basis: 50%;
 }
 
 .dash-bar {
   width: 100%;
   position: sticky;
   text-align: left;
+  background-color: #0d0000;
 }
 .logo {
   width: 15%;
@@ -57,7 +70,7 @@ h2 {
 .container-sidebar {
   margin: 0;
   position: sticky;
-  background-color: #2b2b38;
+  background-color: #bf9a78;
   flex-basis: 15%;
 }
 #link {
@@ -74,21 +87,28 @@ h2 {
 }
 .card {
   box-sizing: border-box;
-  transition: ea;
+  transition: all 1s;
 }
+
+.stats {
+  font-size: 2em;
+  color: #0e0f3b;
+  animation-name: fade;
+  animation-duration: 10s;
+}
+
 .card-main {
-  color: black;
+  color: white;
   padding: 1%;
   margin: 10px auto;
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  border-bottom: 2px solid #f27272;
   padding-bottom: 4%;
 }
 .card-body {
-  box-shadow: 0.5px 0.5px rgba(168, 167, 167, 0.7);
   border-radius: 10px;
+  border: 1px inset #0e0f3b;
   padding: 1% 2%;
 }
 .card-main h1 {
@@ -114,6 +134,22 @@ h2 {
 .filter span {
   margin: 5px;
 }
+#filter {
+  position: relative;
+  font-weight: 700;
+  background-color: #0e0f3b;
+  width: 100%;
+  color: #f2f2f2;
+  border-radius: 15px;
+  padding: 10px;
+}
+.close {
+  width: 10px;
+  height: 10px;
+  position: absolute;
+  top: 2px;
+  right: 2px;
+}
 
 .dropdown:hover {
   cursor: pointer;
@@ -123,7 +159,7 @@ h2 {
   position: absolute;
   bottom: -380%;
   right: 0;
-  background-color: rgb(212, 212, 212);
+  background-color: white;
   z-index: 1;
 }
 .check {
@@ -139,14 +175,22 @@ h2 {
   margin: 0;
   position: absolute;
   right: 5px;
+  visibility: hidden;
+  display: none;
 }
 .check label {
   padding: 0;
+  width: 100%;
 }
 span:first-child {
   font-size: 0.8em;
   color: rgb(148, 148, 148);
 }
+
+.check:hover {
+  background-color: #81bf94;
+}
+
 .table-container {
   text-align: center;
 }
@@ -154,23 +198,66 @@ span:first-child {
   margin: 2% auto;
   display: flex;
   flex-direction: column;
-  box-shadow: 0.5px 0.5px rgb(236, 230, 230);
   padding: 0 5%;
+
+  padding: 2% 4%;
+  height: 80vh;
+  overflow-x: hidden;
+  overflow-y: auto;
+  border-radius: 10px;
+  border: 1px inset #0e0f3b;
 }
 .row {
-  background-color: #f2e7ae;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: space-evenly;
+  border-bottom: 0.005px solid #0e0f3b;
 }
 .row h2 {
-  font-size: 0.9em;
+  font-size: 0.8em;
   width: 12.5%;
 }
+
+.check-mark {
+  width: 15px;
+  margin: 0;
+  position: absolute;
+  right: 5px;
+}
+
 .active {
-  width: 8px;
-  height: 8px;
+  width: 8px !important;
+  height: 8px !important;
   border-radius: 8px;
-  background-color: black;
+  margin-left: 5px;
+}
+.row:first-child {
+  font-weight: bold;
+}
+
+.table::-webkit-scrollbar-track {
+  border: none;
+  border-radius: 10px;
+}
+.table::-webkit-scrollbar-thumb {
+  background: grey;
+  border-radius: 10px;
+}
+.table::-webkit-scrollbar {
+  width: 10px;
+}
+.row h2 {
+  border-right: 0.005px solid #0e0f3b;
+}
+.row h2:last-child {
+  border-right: none;
+}
+@keyframes fade {
+  from {
+    visibility: hidden;
+  }
+  to {
+    visibility: visible;
+  }
 }
