--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,11 @@
   box-sizing: border-box;
   font-family: "DM Sans", sans-serif;
 }
-.god-container {
-  background-color: #0e0f3b;
+.loader {
+  display: flex;
+  justify-content: center;
+  width: 50%;
+  margin: 20vh auto;
 }
 .container {
   box-sizing: border-box;
