--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   font-family: "DM Sans", sans-serif;
 }
 .god-container {
-  background-color: #0e0f3b;
+  background-color: #f6f8fa;
 }
 .container {
   box-sizing: border-box;
@@ -12,31 +12,48 @@
   width: 100%;
   display: flex;
   flex-direction: row;
+  border-radius: 50px;
+
   padding: 0 15px 0 0;
 }
 
 .content {
   flex: 2 1 auto;
-  padding: 1% 2%;
+  padding: 0 2%;
 }
-.title {
+.header {
   display: flex;
-  padding: 4% 2%;
-  border-bottom: 0.5px solid grey;
+  margin-top: 20px;
+  padding: 1% 2%;
+  justify-content: space-between;
 }
 
+.data {
+  width: 100%;
+  text-align: center;
+  margin: 0 auto;
+}
+.title {
+  width: 50%;
+  text-align: left;
+  padding: 10px 0;
+}
 .title h1 {
   font-size: 2.5em;
-  width: 100%;
   color: black;
   flex-wrap: wrap;
   padding: 0;
   margin: 0;
 }
 .select {
-  flex-basis: 50%;
+  width: 50%;
+  text-align: left;
 }
-
+.select h2 {
+  margin: 0;
+  padding: 0;
+  margin-right: 10px;
+}
 .dash-bar {
   width: 100%;
   position: sticky;
@@ -49,33 +66,41 @@
   padding: 1% 2%;
 }
 
-h1 {
+.container-sidebar h1 {
   font-size: 1.5em;
   font-weight: bold;
-  color: white;
+  color: #b3b4b5;
   padding: 15px 15px 5px;
 }
-h2 {
+.container-sidebar h2 {
   font-size: 1em;
+  color: #b3b4b5;
+  padding: 15px;
+  font-weight: 700;
+}
+.img-logo {
+  width: 10%;
+  display: inline-block;
+  margin-right: 10px;
+}
+.select-page {
+  transform: scale(1.1);
+  background-color: black;
+  color: white;
+  transition: all 0.5s;
 }
 #link {
   text-decoration: none;
   padding: 5px 15px;
   display: block;
-  margin-bottom: 10px;
-  color: rgb(255, 255, 255);
   width: 100%;
 }
 
 .container-sidebar {
   margin: 0;
   position: sticky;
-  background-color: #bf9a78;
-  flex-basis: 15%;
-}
-#link {
-  background-color: #2b2b38;
-  width: 100%;
+  background-color: white;
+  flex-basis: 16%;
 }
 
 #link:hover {
@@ -88,28 +113,31 @@ h2 {
 .card {
   box-sizing: border-box;
   transition: all 1s;
+  margin: 8%;
 }
 
 .stats {
+  width: 100%;
   font-size: 2em;
+  text-align: left;
+  margin: 0;
+  padding-bottom: 0;
   color: #0e0f3b;
   animation-name: fade;
   animation-duration: 10s;
 }
 
-.card-main {
-  color: white;
-  padding: 1%;
-  margin: 10px auto;
+.stats {
   display: flex;
+  flex-direction: row;
   justify-content: space-evenly;
-  flex-wrap: wrap;
-  padding-bottom: 4%;
+  margin-bottom: 10%;
 }
 .card-body {
   border-radius: 10px;
   border: 1px inset #0e0f3b;
   padding: 1% 2%;
+  margin-bottom: 5%;
 }
 .card-main h1 {
   color: #323c73;
@@ -127,6 +155,11 @@ h2 {
 .table-head {
   display: flex;
   justify-content: space-between;
+  padding: 1% 2%;
+}
+.table-head h2 {
+  margin: 0;
+  padding: 0;
 }
 .filter {
   position: relative;
@@ -137,7 +170,7 @@ h2 {
 #filter {
   position: relative;
   font-weight: 700;
-  background-color: #0e0f3b;
+  background-color: black;
   width: 100%;
   color: #f2f2f2;
   border-radius: 15px;
@@ -157,7 +190,7 @@ h2 {
 
 .checkbox {
   position: absolute;
-  bottom: -380%;
+  bottom: -1000%;
   right: 0;
   background-color: white;
   z-index: 1;
@@ -190,7 +223,11 @@ span:first-child {
 .check:hover {
   background-color: #81bf94;
 }
-
+.tabel-content {
+  background-color: white;
+  padding: 2%;
+  border-radius: 3%;
+}
 .table-container {
   text-align: center;
 }
@@ -205,18 +242,19 @@ span:first-child {
   overflow-x: hidden;
   overflow-y: auto;
   border-radius: 10px;
-  border: 1px inset #0e0f3b;
 }
 .row {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: space-evenly;
-  border-bottom: 0.005px solid #0e0f3b;
 }
 .row h2 {
   font-size: 0.8em;
   width: 12.5%;
+}
+.sort {
+  cursor: pointer;
 }
 
 .check-mark {
@@ -260,4 +298,57 @@ span:first-child {
   to {
     visibility: visible;
   }
+}
+#spinner {
+  transform: rotateX(-30deg);
+}
+.loader {
+  width: 70%;
+  margin: 40vh auto;
+  text-align: center;
+  background-color: white;
+}
+.basic-card {
+  background-color: white;
+  box-shadow: 0.5px 0.5px #f2f2f2;
+  padding: 2%;
+  border-radius: 5%;
+  width: 30%;
+}
+.charts {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 10%;
+}
+.discription {
+  display: flex;
+  flex-direction: row;
+
+  justify-content: space-between;
+}
+.discription h1 {
+  text-align: left;
+}
+.activity:hover,
+.signed:hover {
+  transform: scale(1.08);
+  box-shadow: 1px 1px #f2f2f2;
+}
+.basic-card:hover {
+  transform: scale(1.1);
+  background-color: #514df7;
+  color: white !important;
+  transform: all 0.5s;
+}
+.basic-card:hover h2 {
+  color: white !important;
+  transform: all 0.5s;
+}
+.basic-card:hover h1 {
+  color: white !important;
+  transform: all 0.5s;
+}
+.Dropdown-control {
+  border: none !important;
 }
